; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_futils.c_git_futils_mkpath2file.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_futils.c_git_futils_mkpath2file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_MKDIR_PATH = common dso_local global i32 0, align 4
@GIT_MKDIR_SKIP_LAST = common dso_local global i32 0, align 4
@GIT_MKDIR_VERIFY_DIR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_futils_mkpath2file(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i8*, i8** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @GIT_MKDIR_PATH, align 4
  %8 = load i32, i32* @GIT_MKDIR_SKIP_LAST, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @GIT_MKDIR_VERIFY_DIR, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @git_futils_mkdir(i8* %5, i32 %6, i32 %11)
  ret i32 %12
}

declare dso_local i32 @git_futils_mkdir(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
